Revision history for WebService::Idonethis

{{$NEXT}}

0.19      2013-04-06 16:58:35 Australia/Melbourne

    * OPTIMISE: Keep-alive is set on connections to idonethis
                for faster network operations.

0.18      2013-03-27 15:21:19 Australia/Melbourne

    * FEATURE:  -r with only a single date implies an end of 'now' (GH #13)

0.17      2013-03-22 22:09:14 Australia/Melbourne

    * DOCS:     Links to github.com/pfenwick updated to github.com/pjf
    * FEATURE:  WebService::Idonethis now has a get_range() method.
    * FEATURE:  `idone -r` now allows listing from a range of dates.

0.16      2013-03-22 14:16:56 Australia/Melbourne

    * FEATURE:  `idone` supports -V to show version number.
    * FEATURE:  `idone` now always adds trailing args to your done list.

0.15      2013-03-12 19:26:09 Australia/Melbourne

    * FEATURE:  The '-d' switch now supports natural language date
                inputs ('last thursday', '3 days ago', 'tuesday week', etc)
                as well as YYYY-MM-DD format. (GH #9)

0.14      2013-03-12 13:23:25 Australia/Melbourne

    * BUGFIX:   Usernames are no longer considered case-sensitive when
                checking to see if our login was successful.
                (Thanks to @vyctryx for the bug report.)

0.13      2013-03-03 16:09:59 Australia/Melbourne

    * BUGFIX:   `idone` now supports unicode input (cmdline and STDIN).
    * DEPENDS:   Added dependency on `utf8::all`.

0.12      2013-02-27 15:41:24 Australia/Melbourne

    * INTERNAL: Made the changelog file look nicer.
    * BUGFIX:   Decode HTML entities in done lists.

0.11      2013-02-21 01:40:45 Australia/Melbourne

    * BUGFIX: Remove spurious warnings when printing unicode/utf8.
    * TEST:   Added trivial test case for loading module (load.t).

0.10      2013-02-19 02:20:24 Australia/Melbourne

    * BUGFIX: Github #5 - Actually give help on --help. Thanks @wizonesolutions.

0.09      2013-02-19 00:38:22 Australia/Melbourne
